<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="#FF2126"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingLeft="5dip"
        android:paddingTop="3dp" >

        <ImageView
            android:id="@+id/headerX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/logo_simple" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.57"
            android:background="@android:color/transparent"
            android:text="Touchcloud"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg_cloud_left"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:background="@android:color/transparent"
            android:orientation="vertical" >

            <!-- QUESTION 1 -->

            <LinearLayout
                android:id="@+id/question1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/app_item_simple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:text="@string/question_1"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#E44C43" >
                </TextView>

                <ImageView
                    android:id="@+id/photo_view"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:layout_marginBottom="15dp" />

                <Button
                    android:id="@+id/take_photo_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableTop="@drawable/ic_menu_camera_white"
                    android:background="@drawable/button_background"
                    android:textSize="0pt"
                    android:layout_marginBottom="3dp" />
                
                <TextView
                    android:id="@+id/photo_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@android:color/transparent"
                    android:text="@string/take_photo"
                    android:textColor="#636363"
                    android:textSize="7pt" />

            </LinearLayout>
            
              <!-- QUESTION 1b -->

            <LinearLayout
                android:id="@+id/question1b"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/app_item_simple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:text="@string/question_1b"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#E44C43" />

                <EditText
                    android:id="@+id/answer1b"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textColor="#000000"
                     />
            </LinearLayout>

            <!-- QUESTION 2 -->

            <LinearLayout
                android:id="@+id/question2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/app_item_simple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:gravity="center"
                    android:text="@string/question_2"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#E44C43" />

                <EditText
                    android:id="@+id/answer2"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textColor="#000000"
                     />
            </LinearLayout>

            <!-- QUESTION 3 -->

            <LinearLayout
                android:id="@+id/question3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/app_item_simple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:gravity="center"
                    android:text="@string/question_3"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#E44C43" />

                <EditText
                    android:id="@+id/answer3"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textColor="#000000" />
               
            </LinearLayout>

            <!-- QUESTION 4 -->

            <LinearLayout
                android:id="@+id/question4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/app_item_simple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:gravity="center"
                    android:text="@string/question_4"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#E44C43" />

                <RadioGroup
                    android:id="@+id/answer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" >

                    <RadioButton
                        android:id="@+id/radio0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_positive"
                        android:button="@drawable/red_radio"
                        android:textColor="#000000" />

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         android:button="@drawable/red_radio"
                        android:text="@string/radio_negative"
                        android:textColor="#000000" />
                </RadioGroup>
            </LinearLayout>

            <!-- QUESTION 5 -->

            <LinearLayout
                android:id="@+id/question5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/question5_label"
                    style="@style/app_item_simple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:gravity="left"
                    android:text="@string/question_5_a"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#E44C43" >
                </TextView>

                <EditText
                    android:id="@+id/answer5"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:gravity="left"
                    android:textColor="#000000" />
                
                
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView 
                android:id="@+id/problem_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="#FF0000"
                android:gravity="center"
                android:text="@string/missing_field_warning"/>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                
                <ProgressBar
                    android:id="@+id/survey_progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/transparent"
                    android:max="100"
                    android:progress="1" />
    			            
	                <TextView android:id="@+id/survey_progress_label"
	                    android:text="1/5"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:textColor="#000000"
	                    android:layout_gravity="center"></TextView>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
            
            <Button
                android:id="@+id/report_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:background="@drawable/button_background"
                android:text="@string/back"  />
            
            <Button
                android:id="@+id/report_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/next" />
            
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>